--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ openpyxl==3.0.9
 xlrd==2.0.1
 tiktoken
 PyMuPDF
-pytesseract==0.3.8
+pytesseract
 pdfminer
 pdf2image
 pdfminer.six
@@ -18,4 +18,4 @@ requests
 python-pptx
 sympy
 Pillow
-opencv-python
+
