--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+dotenv==1.0.0
+pandas==1.3.4
 langchain==0.0.154
 PyPDF2==3.0.1
 python-dotenv==1.0.0
@@ -18,4 +20,4 @@ requests
 python-pptx
 sympy
 Pillow
-
+sqlite3
